--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chat</title>
     <link rel="stylesheet" href="style.css" />
-    <script defer src="main.js"></script>
+    <script defer src="src/main.ts" type="module"></script>
   </head>
   <body>
     <main class="container">
