feat: implement scroll

--- a/index.html
+++ b/index.html
@@ -20,24 +20,26 @@
         <button class="button__main">Выйти</button>
       </div>
       <div class="messages">
-        <div class="message message-out">
-          <p>Я: Добрый день!</p>
-          <span class="time">18:45</span>
-        </div>
-        <div class="message message-in">
-          <p>Собеседник: Добрый день!</p>
-          <span class="time">18:45</span>
-        </div>
-        <div class="message message-in">
-          <p>
-            Собеседник: А это второе и, кажется, оно очень длинное, чтобы
-            поместиться на одной строке
-          </p>
-          <span class="time">18:45</span>
-        </div>
-        <div class="message message-out message-sent">
-          <p>Я: Добрый день!</p>
-          <span class="time">18:45</span>
+        <div class="messages__wrapper">
+          <div class="message message-out">
+            <p>Я: Добрый день!</p>
+            <span class="time">18:45</span>
+          </div>
+          <div class="message message-in">
+            <p>Собеседник: Добрый день!</p>
+            <span class="time">18:45</span>
+          </div>
+          <div class="message message-in">
+            <p>
+              Собеседник: А это второе и, кажется, оно очень длинное, чтобы
+              поместиться на одной строке
+            </p>
+            <span class="time">18:45</span>
+          </div>
+          <div class="message message-out message-sent">
+            <p>Я: Добрый день!</p>
+            <span class="time">18:45</span>
+          </div>
         </div>
       </div>
       <div>
