--- a/index.html
+++ b/index.html
@@ -50,113 +50,112 @@
           </button>
         </form>
       </div>
-      <dialog id="settings">
-        <div class="container settings">
-          <div class="settings__header">
-            <span>Настройки</span>
-            <button class="button__close" onclick="window.settings.close()">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                class="lucide lucide-x"
-              >
-                <path d="M18 6 6 18" />
-                <path d="m6 6 12 12" />
-              </svg>
-            </button>
-          </div>
-          <span>Имя в чате</span>
-          <form class="form__modal">
-            <input type="text" placeholder="Стив" class="input input__name" />
-            <button type="submit" class="button__main button__name">-></button>
-          </form>
-        </div>
-      </dialog>
 
-      <dialog open id="authorization">
-        <div class="container settings">
-          <div class="settings__header">
-            <span>Авторизация</span>
-            <button
-              class="button__close"
-              onclick="window.authorization.close()"
-            >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                class="lucide lucide-x"
-              >
-                <path d="M18 6 6 18" />
-                <path d="m6 6 12 12" />
-              </svg>
-            </button>
-          </div>
-          <span class="email">Почта:</span>
-          <form class="form__email">
-            <input
-              type="text"
-              placeholder="example@gmail.com"
-              class="input input__email"
-            />
-            <div class="buttons">
-              <button type="submit" class="button__main button__receive">
-                Получить код
-              </button>
-              <button type="button" class="button__main button__enter_code">
-                Ввести код
-              </button>
-            </div>
-          </form>
-        </div>
-      </dialog>
-
-      <dialog id="login">
-        <div class="container settings">
-          <div class="settings__header">
-            <span>Подтверждение</span>
-            <button class="button__close" onclick="window.login.close()">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                class="lucide lucide-x"
-              >
-                <path d="M18 6 6 18" />
-                <path d="m6 6 12 12" />
-              </svg>
-            </button>
-          </div>
-          <span class="email">Код:</span>
-          <form class="form__email">
-            <input type="text" placeholder="код" class="input input__code" />
-            <button class="button__main button__signin">Войти</button>
-          </form>
-        </div>
-      </dialog>
       <template id="message">
         <p></p>
         <span class="time">18:45</span>
       </template>
     </main>
+
+    <dialog id="settings">
+      <div class="container settings">
+        <div class="settings__header">
+          <span>Настройки</span>
+          <button class="button__close" onclick="window.settings.close()">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="lucide lucide-x"
+            >
+              <path d="M18 6 6 18" />
+              <path d="m6 6 12 12" />
+            </svg>
+          </button>
+        </div>
+        <span>Имя в чате</span>
+        <form class="form__modal">
+          <input type="text" placeholder="Стив" class="input input__name" />
+          <button type="submit" class="button__main button__name">-></button>
+        </form>
+      </div>
+    </dialog>
+
+    <dialog open id="authorization">
+      <div class="container settings">
+        <div class="settings__header">
+          <span>Авторизация</span>
+          <button class="button__close" onclick="window.authorization.close()">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="lucide lucide-x"
+            >
+              <path d="M18 6 6 18" />
+              <path d="m6 6 12 12" />
+            </svg>
+          </button>
+        </div>
+        <span class="email">Почта:</span>
+        <form class="form__email">
+          <input
+            type="text"
+            placeholder="example@gmail.com"
+            class="input input__email"
+          />
+          <div class="buttons">
+            <button type="submit" class="button__main button__receive">
+              Получить код
+            </button>
+            <button type="button" class="button__main button__enter_code">
+              Ввести код
+            </button>
+          </div>
+        </form>
+      </div>
+    </dialog>
+
+    <dialog id="login">
+      <div class="container settings">
+        <div class="settings__header">
+          <span>Подтверждение</span>
+          <button class="button__close" onclick="window.login.close()">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="lucide lucide-x"
+            >
+              <path d="M18 6 6 18" />
+              <path d="m6 6 12 12" />
+            </svg>
+          </button>
+        </div>
+        <span class="email">Код:</span>
+        <form class="form__email">
+          <input type="text" placeholder="код" class="input input__code" />
+          <button class="button__main button__signin">Войти</button>
+        </form>
+      </div>
+    </dialog>
   </body>
 </html>
