feat: add dark theme barebones

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <input type="text" placeholder="Стив" class="input input__name" />
           <button type="submit" class="button__main button__name">-></button>
         </form>
-      </div>
+        <button class="button__dark_theme">Темная тема</button>
     </dialog>
 
     <dialog open id="authorization">
